--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="hero">
         <div class="hero-content">
             <h1>ອາຫານລາວ</h1>
-            <p>ລົດຊາດແຫ່ງມໍລະດົກວັດທະນະທຳ</p>
+            <p>ລົດຊາດແຫ່ງມໍລະດົກວັດທະນະທຳ123</p>
             <a href="#popular-dishes" class="btn">ຄົ້ນພົບອາຫານລາວ</a>
         </div>
     </header>
